--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ssharaf.game_2048"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.1.1" >
 
     <uses-sdk android:minSdkVersion="8" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:icon="@drawable/ic_launcher"
